# leptos_actix_template

./: .gitignore  Cargo.toml  README.md  dev  leptos.md  run
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html  pwa.webmanifest  sw.js
frontend/src/: connection_status.rs  lib.rs  main.rs
